# job-assist

./: .gitignore  README.md  pyproject.toml
modulefile/: job-assist.lua
src/job_assist/: __init__.py  __main__.py  cli.py  detector.py  generator.py  prompts.py
