[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "job-assist"
version = "0.1.0"
description = "Interactive SLURM sbatch script generator for HPC clusters"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{ name = "HPC Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Clustering",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "questionary>=2.0.0",
]

[project.scripts]
job-assist = "job_assist.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
